MODINVUP-128 sqobs (#132)